--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -3,14 +3,82 @@
 <html>
 
 <head>
+    <meta charset="utf-8">
+
     <link rel="icon" href="/static/img/favicon.png" type="image/png">
+    <link rel="stylesheet" href="/static/css/app.css" type="text/css">
+
     <title>Todo! - FastAPI app</title>
     <script src="https://unpkg.com/mithril/mithril.js"></script>
 </head>
 
 <body>
-    <div id="root">
+    <div class="wrapper">
+        <div class="todo__container">
+            <div class="todo__task">
+                <div class="todo__task__title">
+                    <h2>Уроки</h2>
+                    <hr />
+                </div>
+                <div class="todo__task__description">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla dictum dui a ligula fringilla
+                    malesuada. Quisque placerat diam sed mattis mollis. Pellentesque tincidunt tellus ligula, vel
+                    porttitor est viverra a. Ut nec laoreet dui. Curabitur iaculis sagittis purus at rhoncus. Morbi a mi
+                    sapien. Duis iaculis, nibh vitae gravida faucibus, nisi sapien porttitor nibh, non euismod mi odio
+                    sit amet neque. Suspendisse lobortis pharetra consectetur. Suspendisse id efficitur nisi. Praesent
+                    dictum maximus arcu vitae viverra.
 
+                    Sed quis varius sapien. Nulla facilisi. Aliquam erat volutpat. Phasellus facilisis, odio quis
+                    iaculis rhoncus, diam sem blandit dui, eu congue mi ante a leo. Nunc facilisis lobortis vestibulum.
+                    Nunc ac commodo sapien, eu commodo augue. Quisque vel viverra ligula, sit amet placerat libero.
+                </div>
+                <div class="todo__task__time">
+                    Created: 1 Apr 2022, Until: 25 Mar 2023
+                </div>
+            </div>
+            <div class="todo__task">
+                <div class="todo__task__title">
+                    <h2>Уроки</h2>
+                    <hr />
+                </div>
+                <div class="todo__task__description">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla dictum dui a ligula fringilla
+                    malesuada. Quisque placerat diam sed mattis mollis. Pellentesque tincidunt tellus ligula, vel
+                    porttitor est viverra a. Ut nec laoreet dui. Curabitur iaculis sagittis purus at rhoncus. Morbi a mi
+                    sapien. Duis iaculis, nibh vitae gravida faucibus, nisi sapien porttitor nibh, non euismod mi odio
+                    sit amet neque. Suspendisse lobortis pharetra consectetur. Suspendisse id efficitur nisi. Praesent
+                    dictum maximus arcu vitae viverra.
+
+                    Sed quis varius sapien. Nulla facilisi. Aliquam erat volutpat. Phasellus facilisis, odio quis
+                    iaculis rhoncus, diam sem blandit dui, eu congue mi ante a leo. Nunc facilisis lobortis vestibulum.
+                    Nunc ac commodo sapien, eu commodo augue. Quisque vel viverra ligula, sit amet placerat libero.
+                </div>
+                <div class="todo__task__time">
+                    Created: 1 Apr 2022, Until: 25 Mar 2023
+                </div>
+            </div>
+            <div class="todo__task">
+                <div class="todo__task__title">
+                    <h2>Уроки</h2>
+                    <hr />
+                </div>
+                <div class="todo__task__description">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla dictum dui a ligula fringilla
+                    malesuada. Quisque placerat diam sed mattis mollis. Pellentesque tincidunt tellus ligula, vel
+                    porttitor est viverra a. Ut nec laoreet dui. Curabitur iaculis sagittis purus at rhoncus. Morbi a mi
+                    sapien. Duis iaculis, nibh vitae gravida faucibus, nisi sapien porttitor nibh, non euismod mi odio
+                    sit amet neque. Suspendisse lobortis pharetra consectetur. Suspendisse id efficitur nisi. Praesent
+                    dictum maximus arcu vitae viverra.
+
+                    Sed quis varius sapien. Nulla facilisi. Aliquam erat volutpat. Phasellus facilisis, odio quis
+                    iaculis rhoncus, diam sem blandit dui, eu congue mi ante a leo. Nunc facilisis lobortis vestibulum.
+                    Nunc ac commodo sapien, eu commodo augue. Quisque vel viverra ligula, sit amet placerat libero.
+                </div>
+                <div class="todo__task__time">
+                    Created: 1 Apr 2022, Until: 25 Mar 2023
+                </div>
+            </div>
+        </div>
     </div>
     <script src="/static/js/app.js" type="text/javascript"></script>
 </body>
